css/ddash-b html cleanup 1/2

--- a/files/es/web/css/-moz-force-broken-image-icon/index.html
+++ b/files/es/web/css/-moz-force-broken-image-icon/index.html
@@ -23,10 +23,7 @@ translation_of: Web/CSS/-moz-force-broken-image-icon
 
 <h3 id="Values" name="Values">Valores</h3>
 
-<dl>
- <dt>{{cssxref("&lt;integer&gt;")}}</dt>
- <dd> </dd>
-</dl>
+{{cssxref("&lt;integer&gt;")}}
 
 <h2 id="Examples" name="Examples">Ejemplos</h2>
 
