--- a/files/es/web/css/@import/index.html
+++ b/files/es/web/css/@import/index.html
@@ -21,8 +21,8 @@ translation_of: Web/CSS/@import
 
 <dl>
  <dt style="margin: 0 40px;"><em>url</em></dt>
- <dd style="margin: 0 40px;">es una <span style="background-color: rgb(250, 251, 252); font-family: consolas,monaco,andale mono,monospace; font-size: 1rem; line-height: 19px; white-space: pre;">{{cssxref("&lt;string&gt;")}} </span>o un {{cssxref("&lt;uri&gt;")}}</dd>
- <dd style="margin: 0pt 40px;">Representa la ubicación del recurso a importar. La <em>url</em> puede ser absoluta o relativa.</dd>
+ <dd style="margin: 0 40px;">es una <span style="background-color: rgb(250, 251, 252); font-family: consolas,monaco,andale mono,monospace; font-size: 1rem; line-height: 19px; white-space: pre;">{{cssxref("&lt;string&gt;")}} </span>o un {{cssxref("&lt;uri&gt;")}}<br><br>
+ Representa la ubicación del recurso a importar. La <em>url</em> puede ser absoluta o relativa.</dd>
  <dt style="margin: 0 40px;"><em>list-of-media-queries</em></dt>
  <dd style="margin: 0 40px;">Es una lista separada por comas de <a href="/en/CSS/Media_queries" title="/en/CSS/Media_queries">consultas de medios (media query)</a> que condicionan la aplicación de las reglas CSS definidas en el enlace <em>url</em>. Si el navegador no soporta cualquiera de estos <a href="/en/CSS/Media_queries" title="/en/CSS/Media_queries">consultas de medios (media query)</a>,  ni siquiera cargará el recurso vinculado.</dd>
 </dl>
