--- a/files/es/web/css/_colon_dir/index.html
+++ b/files/es/web/css/_colon_dir/index.html
@@ -40,9 +40,8 @@ translation_of: 'Web/CSS/:dir'
  <dd>Orientar elementos de derecha a izquierda.</dd>
  <dt>
  <h3 id="Sintaxis_formal">Sintaxis formal</h3>
-
- {{csssyntax}}
  </dt>
+ <dd>{{csssyntax}}</dd>
 </dl>
 
 <h2 id="Ejemplo">Ejemplo</h2>
