--- a/files/es/web/css/_colon_focus-visible/index.html
+++ b/files/es/web/css/_colon_focus-visible/index.html
@@ -49,7 +49,7 @@ translation_of: 'Web/CSS/:focus-visible'
 
 <pre class="brush: html notranslate">&lt;custom-button tabindex="0" role="button"&gt;Click Me&lt;/custom-button&gt;</pre>
 
-<pre class="brush: css highlight[13, 19] notranslate">custom-button {
+<pre class="">custom-button {
   display: inline-block;
   margin: 10px;
 }
