--- a/files/es/web/css/_colon_indeterminate/index.html
+++ b/files/es/web/css/_colon_indeterminate/index.html
@@ -49,7 +49,7 @@ input:indeterminate {
 
 <h4 id="CSS">CSS</h4>
 
-<pre class="brush: css; hightlight[5]">input:indeterminate + label {
+<pre class="">input:indeterminate + label {
   background: lime;
 }
 </pre>
@@ -76,7 +76,7 @@ for (var i = 0; i &lt; inputs.length; i++) {
 
 <h4 id="CSS_2">CSS</h4>
 
-<pre class="brush: css; hightlight[5]">progress {
+<pre class="">progress {
   margin: 4px;
 }
 
