--- a/files/es/web/css/_doublecolon_first-line/index.html
+++ b/files/es/web/css/_doublecolon_first-line/index.html
@@ -107,7 +107,7 @@ especial, porque no es un elemento de bloque.&lt;/span&gt;</pre>
 </table>
 
 <div>
-<div class="hidden"><br>
+<div class=""><br>
 <font face="x-locale-heading-primary, zillaslab, Palatino, Palatino Linotype, x-locale-heading-secondary, serif"><span style="font-size: 37.3333px;"><strong>Compatibilidad</strong></span></font></div>
 
 
