--- a/files/es/web/css/angle/index.html
+++ b/files/es/web/css/angle/index.html
@@ -47,7 +47,7 @@ translation_of: Web/CSS/angle
    <td>
     <p>Ángulo nulo: <code>0deg = 0grad = 0turn</code><code> </code><code style="white-space: nowrap;">=</code><code> 0rad</code></p>
 
-    <div class="note"><strong>Nota:</strong> <code>0</code> no es un valor de ángulo válido.</div>
+    <div class=""><strong>Nota:</strong> <code>0</code> no es un valor de ángulo válido.</div>
    </td>
   </tr>
  </tbody>
