--- a/files/es/web/css/background-origin/index.html
+++ b/files/es/web/css/background-origin/index.html
@@ -59,7 +59,7 @@ translation_of: Web/CSS/background-origin
 </ul>
 <h2 id="Compatibilidad_de_navegadores">Compatibilidad de navegadores</h2>
 <div id="compat-desktop">
- <table class="compat-table">
+ <table class="">
   <tbody>
    <tr>
     <th>Feature</th>
