--- a/files/es/web/css/background-repeat/index.html
+++ b/files/es/web/css/background-repeat/index.html
@@ -20,7 +20,7 @@ translation_of: Web/CSS/background-repeat
 
 
 
-<div class="hidden">
+<div class="">
 <p>La fuente de este ejemplo interactivo es de GitHub. Si estás interesado en contribuir a los ejemplos interactivos, por favor accee a  <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples</a> y envíanos una solicitud para colaborar.</p>
 </div>
 
@@ -56,8 +56,7 @@ background-repeat: unset;
 
 <dl>
  <dt><code>&lt;repeat-style&gt;</code></dt>
- <dd>Los atributos de valor único son una abreviación de los atributos de doble valor.</dd>
- <dd>
+ <dd>Los atributos de valor único son una abreviación de los atributos de doble valor.
  <table class="standard-table">
   <tbody>
    <tr>
@@ -90,8 +89,7 @@ background-repeat: unset;
    </tr>
   </tbody>
  </table>
- En los atributos de doble valor, el primer valor se comporta usando la repetición horizontal y el segundo valor representa el comportamiento de repetición vertical. Aquí se explica como cada opción funciona con cada dirección:</dd>
- <dd>
+ En los atributos de doble valor, el primer valor se comporta usando la repetición horizontal y el segundo valor representa el comportamiento de repetición vertical. Aquí se explica como cada opción funciona con cada dirección:
  <table class="standard-table">
   <tbody>
    <tr>
