--- a/files/es/web/css/border/index.html
+++ b/files/es/web/css/border/index.html
@@ -43,11 +43,9 @@ translation_of: Web/CSS/border
 
 <h3 id="Valores" name="Valores">Valores</h3>
 
-<dl>
- <dt>{{ Cssxref("border-width") }}.</dt>
- <dt>{{ Cssxref("border-style") }}.</dt>
- <dt>{{ Cssxref("border-color") }}.</dt>
-</dl>
+{{ Cssxref("border-width") }}.<br><br>
+{{ Cssxref("border-style") }}.<br><br>
+{{ Cssxref("border-color") }}.<br><br>
 
 <h3 id="Ejemplos" name="Ejemplos">Ejemplos</h3>
 
