--- a/files/es/web/css/@font-face/font-style/index.html
+++ b/files/es/web/css/@font-face/font-style/index.html
@@ -20,7 +20,7 @@ translation_of: Web/CSS/@font-face/font-style
 
 <h2 id="Syntax">Syntax</h2>
 
-<div class="syntaxbox">
+<div class="">
 <pre class="brush: css">font-style: normal;
 font-style: italic;
 font-style: oblique;</pre>
