--- a/files/es/web/css/background/index.html
+++ b/files/es/web/css/background/index.html
@@ -81,7 +81,7 @@ background: no-repeat center/80% url("../img/image.png");</pre>
 
 <h3 id="CSS">CSS</h3>
 
-<pre class="brush:css' highlight:[2,6];">.warning {
+<pre class="">.warning {
   background: red;
 }
 
