--- a/files/es/web/css/border-block/index.html
+++ b/files/es/web/css/border-block/index.html
@@ -82,7 +82,7 @@ border-block: medium dashed blue;
 
 <h2 id="Compatibilidad_en_navegadores">Compatibilidad en navegadores </h2>
 
-<div class="hidden">
+<div class="">
 <p>La tabla de compatibilidad en esta página se genera a partir de datos estructurados. Si desea contribuir con los datos, visite <a href="https://github.com/mdn/browser-compat-data" style="font-size: 1rem; letter-spacing: -0.00278rem;">https://github.com/mdn/browser-compat-data</a><span style="font-size: 1rem; letter-spacing: -0.00278rem;"> y envíanos un pull request.</span></p>
 </div>
 
