--- a/files/es/web/css/border-top-right-radius/index.html
+++ b/files/es/web/css/border-top-right-radius/index.html
@@ -62,81 +62,7 @@ border-top-right-radius: inherit;
 
 <h2 id="Ejemplos">Ejemplos</h2>
 
-<table class="standard-table">
- <thead>
-  <tr>
-   <th>Ejemplo en vivo</th>
-   <th>Código</th>
-  </tr>
- </thead>
- <tbody>
-  <tr>
-   <td style="padding: 1.5em;">
-    <div style="background-color: lightgreen; border: solid 1px black; border-top-right-radius: 40px 40px; width: 100px; height: 100px;"> </div>
-   </td>
-   <td>Un arco de círculo usado como borde
-    <pre class="brush: css">
-div {
-  border-top-right-radius: 40px 40px;
-}
-</pre>
-   </td>
-  </tr>
-  <tr>
-   <td style="padding: 1.5em;">
-    <div style="background-color: lightgreen; border: solid 1px black; border-top-right-radius: 40px 20px; width: 100px; height: 100px;"> </div>
-   </td>
-   <td>Un arco de elipse usado como borde
-    <pre class="brush: css">
-div {
-  border-top-right-radius: 40px 20px;
-}
-</pre>
-   </td>
-  </tr>
-  <tr>
-   <td style="padding: 1.5em;">
-    <div style="background-color: lightgreen; border: solid 1px black; border-top-right-radius: 40%; width: 100px; height: 100px;"> </div>
-   </td>
-   <td>La caja es un cuadro: un arco de círculo es usado como borde
-    <pre class="brush: css">
-div {
-  border-top-right-radius: 40%;
-}
-</pre>
-   </td>
-  </tr>
-  <tr>
-   <td style="padding: 1.5em;">
-    <div style="background-color: lightgreen; border: solid 1px black; border-top-right-radius: 40%; width: 100px; height: 200px;">
-    <div class="hidden">.</div>
-    </div>
-   </td>
-   <td>La caja no es un círculo: un arco de elipse es usado como borde
-    <pre class="brush: css">
-div {
-  border-top-right-radius: 40%;
-}
-</pre>
-   </td>
-  </tr>
-  <tr>
-   <td style="padding: 1.5em;">
-    <div style="border: black 3px double; border-top-right-radius: 40%; height: 100px; width: 100px; background-color: rgb(250,20,70); background-clip: content-box;"> </div>
-   </td>
-   <td>El color de fondo está delimitado al borde
-    <pre class="brush: css">
-div {
-  border-top-right-radius:40%;
-  border-style: black 3px double;
-  background-color: rgb(250,20,70);
-  background-clip: content-box;
-}
-</pre>
-   </td>
-  </tr>
- </tbody>
-</table>
+«Tabla»
 
 <h2 id="Especificaciones">Especificaciones</h2>
 
