css/c-f html cleanup

--- a/files/es/web/css/clip/index.html
+++ b/files/es/web/css/clip/index.html
@@ -37,8 +37,8 @@ clip: inherit</pre>
  o
 
  <pre style="margin: 0;">rect(&lt;top&gt; &lt;right&gt; &lt;bottom&gt; &lt;left&gt;)      /* sintaxis compatible inversa */</pre>
- donde<code>&lt;top&gt;</code> y <code>&lt;bottom&gt;</code> especifícan desplazamientos de la <em>esquina del borde superior</em> de la caja, y <code>&lt;right&gt;</code>, y <code>&lt;left&gt;</code> especifican desplazamientos de la <em>esquina del borde izquiedo</em> de la caja.</dd>
- <dd><code>&lt;top&gt;</code>, <code>&lt;right&gt;</code>, <code>&lt;bottom&gt;</code>, y <code>&lt;left&gt;</code> pueden cada uno tenerun valor {{cssxref("&lt;length&gt;")}} o <code> auto</code>.</dd>
+ donde<code>&lt;top&gt;</code> y <code>&lt;bottom&gt;</code> especifícan desplazamientos de la <em>esquina del borde superior</em> de la caja, y <code>&lt;right&gt;</code>, y <code>&lt;left&gt;</code> especifican desplazamientos de la <em>esquina del borde izquiedo</em> de la caja.<br><br>
+ <code>&lt;top&gt;</code>, <code>&lt;right&gt;</code>, <code>&lt;bottom&gt;</code>, y <code>&lt;left&gt;</code> pueden cada uno tenerun valor {{cssxref("&lt;length&gt;")}} o <code> auto</code>.</dd>
  <dt><code>auto</code></dt>
  <dd>El elemento no se recorta (valor por defecto)</dd>
 </dl>
