--- a/files/es/web/css/css_fonts/index.html
+++ b/files/es/web/css/css_fonts/index.html
@@ -58,6 +58,7 @@ translation_of: Web/CSS/CSS_Fonts
  </div>
  </dd>
  <dt>{{cssxref("@font-feature-values")}}</dt>
+ <dd>Empty</dd>
 </dl>
 
 <h2 id="Guia">Guia</h2>
