--- a/files/es/web/css/css_grid_layout/index.html
+++ b/files/es/web/css/css_grid_layout/index.html
@@ -191,7 +191,7 @@ translation_of: Web/CSS/CSS_Grid_Layout
 </table>
 
 <section id="Quick_links">
-<section class="Quick_links" id="Enlaces_Rapidos">
+<section class="" id="Enlaces_Rapidos">
 <ol>
  <li><a href="/es/docs/Web/CSS"><strong>CSS</strong></a></li>
  <li><a href="/es/docs/Web/CSS/Reference"><strong>CSS Reference</strong></a></li>
