--- a/files/es/web/css/css_grid_layout/relationship_of_grid_layout/index.html
+++ b/files/es/web/css/css_grid_layout/relationship_of_grid_layout/index.html
@@ -78,8 +78,8 @@ original_slug: Web/CSS/CSS_Grid_Layout/Relacion_de_Grid_Layout
 
 <p>En el siguiente ejemplo construyo el mismo diseño usando Grid. Esta vez tenemos tres pistas de columna de <code>1fr</code>. No necesitamos establecer nada sobre los ítems mismos, ellos se colocarán uno dentro de cada celda de la cuadrícula creada. Como se puede ver, se mantienen en una cuadrícula estricta, alineados en filas y columnas. Con cinco ítems, tenemos un hueco al final de la fila dos.</p>
 
-<div class="Two_Dimensional_With_Grid">
-<div class="hidden">
+<div class="">
+<div class="">
 <pre class="brush: css">* {box-sizing: border-box;}
 
 .wrapper {
