--- a/files/es/web/css/css_images/using_css_gradients/index.html
+++ b/files/es/web/css/css_images/using_css_gradients/index.html
@@ -25,7 +25,7 @@ original_slug: CSS/Using_CSS_gradients
   <tr>
    <td><img alt="" src="/@api/deki/files/3950/=basic_linear_bluetop.png" style="text-align: center;"></td>
    <td>
-    <div class="gradient-demo linear-top-bottom" style=""> </div>
+    <div class="" style=""> </div>
    </td>
   </tr>
  </tbody>
