--- a/files/es/web/css/css_transitions/using_css_transitions/index.html
+++ b/files/es/web/css/css_transitions/using_css_transitions/index.html
@@ -484,9 +484,9 @@ original_slug: Web/CSS/Transiciones_de_CSS
 
 <p>En este ejemplo, una pequeña caja con texto dentro se mueve hacia atrás y hacia delante a través de la pantalla y los colores de fondo y del texto se difuminan entre dos valores mientras tiene lugar la animación.</p>
 
-<p>
+<pre>
  <video controls src="https://developer.mozilla.org/samples/cssref/transitions/sample1/transitiondemo1.ogv"></video>
-</p>
+</pre>
 
 
 
