--- a/files/es/web/css/display/index.html
+++ b/files/es/web/css/display/index.html
@@ -173,7 +173,7 @@ display: unset;
  </dd>
  <dt><a id="display-internal" name="display-internal">&lt;display-internal&gt;</a></dt>
  <dd>
- <p>Algunos modelos de disposición, como <span class="css">table y ruby</span>, tienen una estructura interna completa, con varios papeles diferentes que sus hijos y descendientes pueden llenar. Esta sección define los valores de visualización "internos", que sólo tienen significado dentro de ese modo de disposición particular.</p>
+ <p>Algunos modelos de disposición, como <span class="">table y ruby</span>, tienen una estructura interna completa, con varios papeles diferentes que sus hijos y descendientes pueden llenar. Esta sección define los valores de visualización "internos", que sólo tienen significado dentro de ese modo de disposición particular.</p>
 
  <p>A menos que se especifique lo contrario, el tipo de visualización interno y el tipo de visualización exterior de los elementos que utilizan estos valores de visualización se establecen en la palabra clave dada.</p>
 
