--- a/files/es/web/css/flex-basis/index.html
+++ b/files/es/web/css/flex-basis/index.html
@@ -43,8 +43,7 @@ flex-basis: unset;
  <dt><code>width</code></dt>
  <dd>Definido por un número seguido de una unidad absoluta tal como <code>px</code>, <code>mm</code> o <code>pt</code>, o un porcentaje del tamaño principal de un contenedor flexible padre. Los valores negativos no son válidos.</dd>
  <dt><code>content</code></dt>
- <dd>Indica el dimensionamiento automático, basado en el contenido del elemento flexible.</dd>
- <dd>
+ <dd>Indica el dimensionamiento automático, basado en el contenido del elemento flexible.<br><br>
  <div class="note"><strong>Nota: </strong>Tenga en cuenta que éste valor no fue presentado en el lanzamiento inicial del Diseño de Caja Flexible, así que no será soportado por algunas implementaciones antiguas. El efecto equivalente puede tenerlo usando <code>auto</code> junto con un tamaño principal (<a href="https://drafts.csswg.org/css2/visudet.html#propdef-width">width</a> o <a href="https://drafts.csswg.org/css2/visudet.html#propdef-height">height</a>) en auto.</div>
 
  <div class="note">
