--- a/files/es/web/css/flex-direction/index.html
+++ b/files/es/web/css/flex-direction/index.html
@@ -11,11 +11,11 @@ translation_of: Web/CSS/flex-direction
 ---
 <p>{{CSSRef}}</p>
 
-<p><span lang="es"><span class="hps">La propiedad</span> <span class="hps">CSS</span> <code><strong><span class="atn hps">flex-</span><span>direction</span></strong></code><span> especifica</span> cómo colocar los objetos flexibles <span class="hps">en el contenedor</span> <span class="hps">flexible</span> <span class="hps">definiendo el eje</span> <span class="hps">principal y</span> <span class="hps">la dirección</span> <span class="atn hps">(</span><span>normal o al revés</span><span>)</span><span>.</span></span></p>
+<p>La propiedad CSS <code><strong>flex-direction</strong></code> especifica cómo colocar los objetos flexibles en el contenedor flexible definiendo el eje principal y la dirección (normal o al revés).</p>
 
 <p>{{EmbedInteractiveExample("pages/css/flex-direction.html")}}</p>
 
-<p><span lang="es"><span class="hps">Tenga en cuenta que</span> <span class="hps">el</span> <span class="hps">valor de</span> <code>row </code><span class="hps">y  <code>row-reverse</code></span> <span class="hps">se verán afectados por</span> <span class="hps">la direccionalidad</span> <span class="hps">del contenedor</span> <span class="hps">flexible.</span> <span class="hps">Si</span> <span class="hps">su atributo</span> <code>dir </code><span class="hps">es</span> <code>ltr</code>, <code>row</code><span class="hps"> representa</span> <span class="hps">el eje horizontal</span> <span class="hps">orientado</span> <span class="hps">de  izquierda</span> <span class="hps">a derecha,</span> <span class="hps">y <code>row-reverse</code></span> <span class="hps">desde la derecha</span> <span class="hps">hacia la izquierda;</span> <span class="hps">si el atributo</span> <code>dir </code><span class="hps">es</span> <code>rtl</code>, <code>row </code><span class="hps">representa</span> <span class="hps">el</span> <span class="hps">eje orientado</span> <span class="hps">de derecha</span> <span class="hps">a izquierda</span><span>,</span> <span class="hps">y  <code>row-reverse</code></span> <span class="hps">de izquierda a</span> <span class="hps">derecha.</span></span></p>
+<p><span lang="es"><span class="">Tenga en cuenta que</span> <span class="">el</span> <span class="">valor de</span> <code>row </code><span class="">y  <code>row-reverse</code></span> <span class="">se verán afectados por</span> <span class="">la direccionalidad</span> <span class="">del contenedor</span> <span class="">flexible.</span> <span class="">Si</span> <span class="">su atributo</span> <code>dir </code><span class="">es</span> <code>ltr</code>, <code>row</code><span class=""> representa</span> <span class="">el eje horizontal</span> <span class="">orientado</span> <span class="">de  izquierda</span> <span class="">a derecha,</span> <span class="">y <code>row-reverse</code></span> <span class="">desde la derecha</span> <span class="">hacia la izquierda;</span> <span class="">si el atributo</span> <code>dir </code><span class="">es</span> <code>rtl</code>, <code>row </code><span class="">representa</span> <span class="">el</span> <span class="">eje orientado</span> <span class="">de derecha</span> <span class="">a izquierda</span><span>,</span> <span class="">y  <code>row-reverse</code></span> <span class="">de izquierda a</span> <span class="">derecha.</span></span></p>
 
 <h2 id="Sintaxis">Sintaxis</h2>
 
@@ -38,7 +38,7 @@ translation_of: Web/CSS/flex-direction
 
 <h3 id="Valores">Valores</h3>
 
-<p><span class="short_text" id="result_box" lang="es"><span class="hps">Se aceptan los siguientes</span> <span class="hps">valores:</span></span></p>
+<p><span class="short_text" id="result_box" lang="es"><span class="">Se aceptan los siguientes</span> <span class="">valores:</span></span></p>
 
 <dl>
  <dt><code>row</code></dt>
