--- a/files/es/web/css/flex-flow/index.html
+++ b/files/es/web/css/flex-flow/index.html
@@ -52,7 +52,7 @@ flex-flow: unset;
 
 <h2 id="Ejemplos">Ejemplos</h2>
 
-<pre class="brush:css;highlight:3">element {
+<pre class="">element {
   /* Main-axis es la dirección de bloque con main-start y main-end opuesto. Los artículos flex se distribuyen en múltiples líneas */
   flex-flow: column-reverse wrap;
 }
