--- a/files/es/web/css/float/index.html
+++ b/files/es/web/css/float/index.html
@@ -16,7 +16,7 @@ translation_of: Web/CSS/float
 
 <p>{{EmbedInteractiveExample("pages/css/float.html")}}</p>
 
-<div class="hidden">
+<div class="">
 <p>La fuente de este ejemplo interactivo está almacenada en un repositorio de GitHub. Si deseas contribuír a los ejemplos interactivos del proyecto, por favor clonar <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples</a> y enviarnos una solicitud de extracción -pull request-.</p>
 </div>
 
@@ -136,11 +136,7 @@ float: unset;</pre>
 
 <h2 id="Sintáxis_Formal">Sintáxis Formal</h2>
 
-<dl>
- <dt>
- {{csssyntax}}
- </dt>
-</dl>
+{{csssyntax}}
 
 <h2 id="Ejemplos" name="Ejemplos">Ejemplos</h2>
 
