--- a/files/es/web/css/font/index.html
+++ b/files/es/web/css/font/index.html
@@ -45,25 +45,25 @@ translation_of: Web/CSS/font
  <dt>status-bar </dt>
  <dd>el tipo de letra usado en la barra de estado de la ventana.</dd>
  <dt>-moz-window </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-document </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-workspace </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-desktop </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-info </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-dialog </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-button </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-pull-down-menu </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-list </dt>
- <dd> </dd>
+ <dd>Empty</dd>
  <dt>-moz-field </dt>
- <dd> </dd>
+ <dd>Empty</dd>
 </dl>
 
 <h2 id="Ejemplos" name="Ejemplos">Ejemplos</h2>
