--- a/files/es/web/css/css_animations/using_css_animations/index.html
+++ b/files/es/web/css/css_animations/using_css_animations/index.html
@@ -11,7 +11,7 @@ tags:
 translation_of: Web/CSS/CSS_Animations/Using_CSS_animations
 original_slug: Web/CSS/CSS_Animations/Usando_animaciones_CSS
 ---
-<p><span class="diff_add">{{SeeCompatTable}}{{CSSRef}}</span></p>
+<p><span class="">{{SeeCompatTable}}{{CSSRef}}</span></p>
 
 <p><strong>Las animaciones CSS3</strong> permiten animar la transición entre un estilo CSS y otro. Las animaciones constan de dos componentes: un estilo que describe la animación CSS y un conjunto de fotogramas que indican su estado inicial y final, así como posibles puntos intermedios en la misma.</p>
 
