--- a/files/es/web/css/filter-function/brightness/index.html
+++ b/files/es/web/css/filter-function/brightness/index.html
@@ -10,7 +10,7 @@ original_slug: Web/CSS/filter-function/brightness()
 
 <div>{{EmbedInteractiveExample("pages/css/function-brightness.html")}}</div>
 
-<p class="hidden">El código de este ejemplo interactivo se encuentra en GitHub repository. Si desea contribuir en el proyecto de ejemplos interactivos, por favor clone el repositorio <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples</a> y envie un pull request.</p>
+<p class="">El código de este ejemplo interactivo se encuentra en GitHub repository. Si desea contribuir en el proyecto de ejemplos interactivos, por favor clone el repositorio <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples</a> y envie un pull request.</p>
 
 <h2 id="Sintaxis">Sintaxis</h2>
 
