--- a/files/es/web/css/fit-content/index.html
+++ b/files/es/web/css/fit-content/index.html
@@ -39,8 +39,8 @@ fit-content(40%)
  <dt>{{cssxref("&lt;length&gt;")}}</dt>
  <dd>Una Longitud Absoluta.</dd>
  <dt>{{cssxref("&lt;percentage&gt;")}}</dt>
- <dd>Un porcentaje relativo al espacio disponible en los ejes dados.</dd>
- <dd>In grid properties it is relative to the inline size of the grid container in column tracks and to the block size of the grid container for row tracks. Otherwise it is relative to the available inline size or block size of the laid out box depending on the writing mode.</dd>
+ <dd>Un porcentaje relativo al espacio disponible en los ejes dados.<br><br>
+ In grid properties it is relative to the inline size of the grid container in column tracks and to the block size of the grid container for row tracks. Otherwise it is relative to the available inline size or block size of the laid out box depending on the writing mode.</dd>
 </dl>
 
 <h3 id="Formal_syntax">Formal syntax</h3>
