--- a/files/es/web/css/flex-wrap/index.html
+++ b/files/es/web/css/flex-wrap/index.html
@@ -40,7 +40,7 @@ flex-wrap: inherit
 
 <h2 id="Ejemplos">Ejemplos</h2>
 
-<pre class="brush:css;highlight:[2]">element {
+<pre class="">element {
   flex-wrap: nowrap;
 }
 </pre>
