--- a/files/es/web/css/font-variant-alternates/index.html
+++ b/files/es/web/css/font-variant-alternates/index.html
@@ -70,7 +70,7 @@ font-variant-alternates: unset;
 &lt;p class="variant"&gt;Firefox rocks!&lt;/p&gt;
 </pre>
 
-<h3 id="CSS"><span class="pun">CSS</span></h3>
+<h3 id="CSS"><span class="">CSS</span></h3>
 
 <pre class="brush: css">p.variant {
   font-family: Leitura Display Swashes;
