--- a/files/es/web/css/font-variant/index.html
+++ b/files/es/web/css/font-variant/index.html
@@ -17,9 +17,7 @@ translation_of: Web/CSS/font-variant
 
 <h2 id="Sintaxis" name="Sintaxis">Sintaxis</h2>
 
-<dl>
- <dd><code>font-variant:</code> {{ mediawiki.external('<code>normal</code> | <code>small-caps</code>') }} ;</dd>
-</dl>
+<code>font-variant:</code> {{ mediawiki.external('<code>normal</code> | <code>small-caps</code>') }} ;
 
 <h3 id="Valores" name="Valores">Valores</h3>
 
